resolve border issue on small breakpoints

--- a/themes/greatermedia/assets/css/greater_media.css
+++ b/themes/greatermedia/assets/css/greater_media.css
@@ -11847,8 +11847,6 @@ category: Components
       height: 270px; } }
   .sponsor:nth-of-type(2n+2) {
     border-right: none; }
-  .sponsor:nth-of-type(-n+2) {
-    border-top: none; }
 
 .sponsor__logo,
 .sponsor__name {
