--- a/themes/wmgk/assets/css/wmgk.css
+++ b/themes/wmgk/assets/css/wmgk.css
@@ -11857,8 +11857,6 @@ category: Components
       height: 270px; } }
   .sponsor:nth-of-type(2n+2) {
     border-right: none; }
-  .sponsor:nth-of-type(-n+2) {
-    border-top: none; }
 
 .sponsor__logo,
 .sponsor__name {
